# $Id$
AC_INIT(configure.in)

CAUDIUM_LOW_MODULE_INIT()

# need to specifically enable Guile support 
if test "$with_Guile" = ""; then
  with_Guile="no"
fi

dirs=""
for a in `(cd $srcdir ; echo *)`
do
  if test "$a" != "CVS" -a "$a" != "RCS" ; then
    if test -d "$srcdir/$a" ; then
      yesno=`eval echo \\$with_$a`
      if test "${yesno-}" != "no" ; then
        dirs="$dirs $a"
      fi
    fi
  fi
done

AC_CONFIG_SUBDIRS($dirs)

AC_OUTPUT(Makefile module_makefile)	





