AC_INIT(guile.c)
AC_CONFIG_HEADER(guile_config.h)

CAUDIUM_MODULE_INIT()

AC_PROG_INSTALL


AC_MSG_CHECKING(for Guile)
if guile-config link > /dev/null; then 
  GUILE_CFLAGS="`guile-config compile`"
  GUILE_LDFLAGS="`guile-config link`"
  AC_SUBST(GUILE_CFLAGS)
  AC_SUBST(GUILE_LDFLAGS)
  AC_DEFINE(HAVE_GUILE)
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
fi

if test "GUILE_LDFLAGS" = ""; then
cat << EOF
*************************************************************
**** The GUILE library wasn't found. If you want the ability
**** to run embedded GUILE, please fetch and install Guile. 
**** Also make sure that the guile-config program is in your
**** path, since it's what were using to determine the correct
**** compile and link options.
****
**** See http://www.gnu.org/software/guile/ for more
**** information about Guile. 
*************************************************************
EOF
fi


AC_OUTPUT(Makefile.pre, [make -f Makefile.pre depend])


dnl ## Local Variables:
dnl ## tab-width: 4
dnl ## End:
	
